CNSDEVCOLECT/force-app/main/default/objects/Dato_Complementarios__c/Dato_Complementarios__c.object-meta.xml
<CustomObject>
    <label>Datos Complementarios</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Datos Complementarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>