CNSDEVCOLECT/force-app/main/default/objects/Dato_Complementarios__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Datos Complementarios</relationshipLabel>
    <relationshipName>DatosComplementarios</relationshipName>
    <type>Lookup</type>
</CustomField>