CNSDEVCOLECT/force-app/main/default/objects/Dato_Complementarios__c/fields/Apellido__c.field-meta.xml
<CustomField>
    <fullName>Apellido__c</fullName>
    <description>Apellido del contacto del prospecto</description>
    <label>Apellido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>