CNSDEVCOLECT/force-app/main/default/objects/Dato_Complementarios__c/fields/Contacto_Principal__c.field-meta.xml
<CustomField>
    <fullName>Contacto_Principal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Establecer contacto principal del prospecto</description>
    <label>Contacto Principal</label>
    <type>Checkbox</type>
</CustomField>