CNSDEVCOLECT/force-app/main/default/objects/Dato_Complementarios__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email de contacto o socio del prospecto</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>