CNSDEVCOLECT/force-app/main/default/objects/Dato_Complementarios__c/fields/Id_Prospecto__c.field-meta.xml
<CustomField>
    <fullName>Id_Prospecto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospecto</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Datos Complementarios</relationshipLabel>
    <relationshipName>Datos_Complementarios</relationshipName>
    <type>Lookup</type>
</CustomField>