CNSDEVCOLECT/force-app/main/default/objects/Dato_Complementarios__c/fields/Participacion__c.field-meta.xml
<CustomField>
    <fullName>Participacion__c</fullName>
    <description>% participación del socio</description>
    <label>% Participacion</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>