CNSDEVCOLECT/force-app/main/default/objects/Dato_Complementarios__c/fields/Rubro__c.field-meta.xml
<CustomField>
    <fullName>Rubro__c</fullName>
    <description>Rubor de proveedores y clientes</description>
    <label>Rubro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>