CNSDEVCOLECT/force-app/main/default/objects/Dato_Complementarios__c/fields/Rut__c.field-meta.xml
<CustomField>
    <fullName>Rut__c</fullName>
    <description>Ingreso de rut de socios</description>
    <inlineHelpText>El número de documento debe ser con el formato 12345678-9.</inlineHelpText>
    <label>Rut</label>
    <length>11</length>
    <type>Text</type>
</CustomField>