CNSDEVCOLECT/force-app/main/default/objects/Dato_Complementarios__c/fields/Telefono__c.field-meta.xml
<CustomField>
    <fullName>Telefono__c</fullName>
    <description>Número de teléfono del contacto</description>
    <label>Teléfono</label>
    <type>Phone</type>
</CustomField>