CNSDEVCOLECT/force-app/main/default/objects/Dato_Complementarios__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contacto</fullName>
            </value>
            <value>
                <fullName>Socio</fullName>
            </value>
            <value>
                <fullName>Cliente de prospecto</fullName>
            </value>
            <value>
                <fullName>Proveedor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>