CNSDEVCOLECT/force-app/main/default/objects/Dato_Complementarios__c/recordTypes/Sales_BBEE_Cliente_Principal.recordType-meta.xml
<RecordType>
    <fullName>Sales_BBEE_Cliente_Principal</fullName>
    <active>true</active>
    <description>Datos complementarios para principales clientes  del prospecto</description>
    <label>Cliente Principal del prospecto</label>
</RecordType>