CNSDEVCOLECT/force-app/main/default/objects/Dato_Complementarios__c/recordTypes/Sales_BBEE_Contacto.recordType-meta.xml
<RecordType>
    <fullName>Sales_BBEE_Contacto</fullName>
    <active>true</active>
    <description>Datos complementarios para contactos del prospecto</description>
    <label>Contacto del prospecto</label>
</RecordType>