CNSDEVCOLECT/force-app/main/default/objects/Dato_Complementarios__c/recordTypes/Sales_BBEE_Proveedores.recordType-meta.xml
<RecordType>
    <fullName>Sales_BBEE_Proveedores</fullName>
    <active>true</active>
    <description>Datos complementarios para principales proveedores del prospecto</description>
    <label>Proveedor del Prospecto</label>
</RecordType>