CNSDEVCOLECT/force-app/main/default/objects/Dato_Complementarios__c/recordTypes/Sales_BBEE_Socio.recordType-meta.xml
<RecordType>
    <fullName>Sales_BBEE_Socio</fullName>
    <active>true</active>
    <description>Datos complementarios para Socios del prospecto</description>
    <label>Socio del Prospecto</label>
</RecordType>